# API-Besoins-caloriques-journaliers

./: .coverage  .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README Description.md  README.md  README_STREAMLIT.md  __main__.py  app_streamlit.py  donnees.json  idées.txt  lancer_app.py  pyproject.toml  requirements.txt  test_extreme1.json  test_extreme2.json  test_extreme3.json  test_extreme4.json  test_extreme5.json  test_extreme_high.json  test_extreme_warnings.json  tests.code-workspace
final/: Aliments statique.ipynb  Aliments.csv  Aliments_correct.ipynb  __init__.py  __main__.py  app.py  conversion.py  data.py  essai.ipynb  graphe.py  lib_conversion.py  lib_format  lib_graphe.py  lib_resolution.py
setup/: setup_github.py
tests/: test_data.py  test_final.py  test_streamlit_app.py
